# raypals

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  HOW_TO_BUILD.txt  LICENSE  README.md  build_simple.bat  build_simple.sh  package.json  raypals.pc  simple_example.c
cmake/: raypalsConfig.cmake.in
examples/: 3d_robot_example.c  3d_sprites_example.c  CMakeLists.txt  basic_shapes.c  environment_showcase.c  game_scene.c  rotating_triangle.c  shape_animation.c  shape_playground.c  sprite_example.c  sprite_gallery.c  sprite_showcase.c  waterfall_example.c
include/: raypals.h
src/: raypals.c
tests/: CMakeLists.txt  test_shapes.c
